--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         </div>
     </div>
     <div>
-        <img src="../myweb/asset/gambar/me.JPG" alt="Landing Image">
+        <img src="./images/me.JPG" alt="Landing Image">
     </div>
 </section>
 <section id="about" >
     <div>
-        <img src="../myweb/asset/gambar/profil.jpg" alt="About Image">
+        <img src="./images/profil.jpg" alt="About Image">
     </div>
     <div>
         <h1>We are the best in our field</h1>
