--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Si Opiq</title>
+    <link rel="Website icon" href="./images/profil.jpg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,8 +23,8 @@
 </header>
 <section id="landing">
     <div>
-        <h1>Lorem ipsum dolor sit amet consectetur</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, eum autem.</p>
+        <h1>I TELL THE STORY OF YOU</h1>
+        <p>I Help Anyone To Tell more relaxed. The good one. Stories That Empower, Inspire, Build Trust, Convert People To People Of Faith, And Connect With Spirits Of Heroes.</p>
         <div>
             <a href="#about" class="btn btn-alt">More Info</a>
             <a class="btn" href="#contact">Contact Us</a>
@@ -70,17 +71,17 @@
     <div class="service-detail">
         <div  class="service-detail-item">
             <img src="images/service1.png" alt="service 1 image">
-            <h2>Web application</h2>
+            <h2>Website</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, optio quod quasi aperiam at ratione.</p>
         </div>
         <div  class="service-detail-item">
             <img src="images/service2.png" alt="service 2 image">
-            <h2>UI/UX Design</h2>
+            <h2>UI/UX</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, optio quod quasi aperiam at ratione.</p>
         </div>
         <div class="service-detail-item">
             <img src="images/service3.png" alt="service 4 image">
-            <h2>Mobile Application</h2>
+            <h2>Design</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, optio quod quasi aperiam at ratione.</p>
         </div>
     </div>
@@ -117,7 +118,7 @@
         </form>
         <div>
             <h1>Our Location</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15864.65706910555!2d106.8524594283222!3d-6.242070227706176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69fd4525190ba3%3A0x19b6e12e2482ee41!2sCoding%20Studio!5e0!3m2!1sid!2sid!4v1662888075401!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63289.121819166816!2d109.01173146605954!3d-7.512615112769161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e65659e732de2b9%3A0x4027a76e352e3a0!2sKec.%20Wangon%2C%20Kabupaten%20Banyumas%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1678212368483!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 </section>
